Bug. Wrong padding

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ header {
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif, cursive;
     margin: 0;
-    padding: 0.5em 0 0.5em 0;
     box-sizing: border-box;
     font-size: 1.2rem;
     -moz-text-size-adjust: none;
@@ -35,6 +34,7 @@ body {
 main {
     margin: 0 1em 0 1em;
     display: flex;
+    padding: 0 0.5em 0 0.5em;
     /*font-size: 1.2em;*/
 }
 
